# tic-tac-toe

./: .gitignore  CMakeLists.txt
headers/: board.hpp  bot.hpp  drawing.hpp  fpscounter.hpp  game.hpp  menu.hpp  player.hpp  text.hpp
src/: board.cpp  bot.cpp  drawing.cpp  fpscounter.cpp  game.cpp  main.cpp  menu.cpp  player.cpp  text.cpp
